--- a/SPASATEL2/Assembly-CSharp-Editor.csproj
+++ b/SPASATEL2/Assembly-CSharp-Editor.csproj
@@ -115,6 +115,9 @@
  <Reference Include="Assembly-UnityScript-Editor-firstpass">
  <HintPath>C:/Users/Art/Documents/Workspace/Final/SPASATEL2/Library/ScriptAssemblies/Assembly-UnityScript-Editor-firstpass.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
@@ -129,6 +132,9 @@
  </Reference>
  <Reference Include="UnityEditor.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/Editor/UnityEditor.Networking.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Analytics">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="CaptureAndSaveLib">
  <HintPath>C:/Users/Art/Documents/Workspace/Final/SPASATEL2/Assets/CaptureAndSave/Plugins/CaptureAndSaveLib.dll</HintPath>
